demo/egress/deploy-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testfw
  labels:
    app: sleep
spec:
  containers:
    - name: mlistener
      image: registry.access.redhat.com/ubi8
      command: ["/bin/sh", "-c"]
      args:
        ["dnf -y install iputils  && sleep inf"]
